# supervaize_hello_world

./: .envrc_template  .gitignore  AGENTS.compiled.md  CLAUDE.md  README.md  __init__.py  agent_data_resource.py  agent_email.py  agent_human_loop.py  agent_simple.py  hello_world.py  home.html  index.html  justfile  main.py  pyproject.toml  supervaizer_control.py  uv.toml.example
.agent/: inherits.yaml
.cursor/hooks/state/: continual-learning.json
tests/: conftest.py  test_data_resource_e2e.py
