[project]
name = "supervaize-hello-world"
version = "0.2.2"
description = "Hello World basic case - for integration of Supervaize agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.128.0", "loguru>=0.7.3", "supervaizer @ file:///Volumes/SSDext1TB/Documents/GitRepo/RUNWAIZE/supervaizer"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
