[project]
name = "supervaize-hello-world"
version = "0.2.2"
description = "Hello World basic case - for integration of Supervaize agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.136.1", "loguru>=0.7.3", "supervaizer==0.17.1"]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
